[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Sonic/sonic.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 17 )

[node name="Player" type="Node2D"]
script = ExtResource( 1 )
widthRadius = 11.0
heightRadius = 13.0
wallOffset = 5.0

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "idle"
centered = false
offset = Vector2( -24, -35 )

[node name="HitBox" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_area_exited"]
